--- a/public/admin.html
+++ b/public/admin.html
@@ -1333,9 +1333,9 @@ cliDatas[ben.id] = ben;
        });
     
           
-          const num = document.createElement('p');
-          num.textContent = ben.id;
-          line.append(num);
+        //  const num = document.createElement('p');
+        //  num.textContent = ben.id;
+        //  line.append(num);
           const status = document.createElement('p');
           status.innerHTML = ben.name + " <br> " + ben.phonenumber;
           line.append(status);
