--- a/public/admin.html
+++ b/public/admin.html
@@ -1551,9 +1551,9 @@ paramDatas[ben.id] = ben;
        });
     
           
-          const num = document.createElement('p');
-          num.textContent = ben.id;
-          line.append(num);
+        //  const num = document.createElement('p');
+         // num.textContent = ben.id;
+        //  line.append(num);
           const status = document.createElement('p');
           status.textContent = ben.donnee;
           line.append(status);
