--- a/public/driver.html
+++ b/public/driver.html
@@ -33,6 +33,12 @@
      <p id="myName">DRIVER</p>
    </div>
    </div>
+    <div id="main" class="menu">
+      <button onclick="document.getElementById('register').style.display='flex';document.getElementById(main).style.display='none';">Enregistrer une benne manuellement</button>
+      <button onclick="document.getElementById('find').style.display='flex';document.getElementById(main).style.display='none';">Trouver une benne</button>
+    </div>
+    <div id="register" style="display:none" class="menu"></div>
+    <div id="find" style="display:none" class="menu"></div>
     <style>
       body {
           margin: 0;
