--- a/public/driver.html
+++ b/public/driver.html
@@ -52,6 +52,12 @@
           font-family: Arial, sans-serif;
            box-sizing:border-box; 
       }
+      .menu {
+        display:flex;
+        flex-direction:row;
+        background:grey;
+        opacity:0.5;
+      }
       .form-container {
           background: white;
           padding: 2rem;
