--- a/public/driver.html
+++ b/public/driver.html
@@ -57,6 +57,8 @@
         display:flex;
         flex-direction:column;
         background-color:rgba(128, 128, 128, 0.5);
+        width:50%;
+        height:50%;
       }
       .form-container {
           background: white;
