--- a/public/driver.html
+++ b/public/driver.html
@@ -56,7 +56,7 @@
       .menu {
         display:flex;
         flex-direction:column;
-        background-color:rgba(128, 128, 128, 0.5);
+        justify-content:center;
         width:50%;
         height:50%;
       }
