--- a/public/driver.html
+++ b/public/driver.html
@@ -38,8 +38,16 @@
     
       <button class="button_driver" onclick="document.getElementById('find').style.display='flex';document.getElementById('main').style.display='none';">Trouver une benne</button>
     </div>
-    <div id="register" style="display:none" class="menu"></div>
-    <div id="find" style="display:none" class="menu"></div>
+    <div id="register" style="display:none" class="menu">
+      <div class="head_small">
+     <button class="button_driver" onclick="document.getElementById('register').style.display='none';document.getElementById('main').style.display='flex';">Retour</button>
+       </div>
+    </div>
+    <div id="find" style="display:none" class="menu">
+      <div class="head_small">
+     <button class="button_driver" onclick="document.getElementById('find').style.display='none';document.getElementById('main').style.display='flex';">Retour</button>
+       </div>
+    </div>
     <style>
       body {
           margin: 0;
@@ -111,6 +119,22 @@
         left:0; /* We'll take the left side as a spot better than the right one */
         width:100%;
         height:10vh;
+        align-items:center; /* We center everything in height */
+        justify-content:space-between; /* Distribue l'espace horizontalement */
+        padding:0 1rem; /* Espace entre bordure et contenu */
+        box-sizing:border-box;
+        color:white;
+        font-weight:bold; /* Police d'écriture en gras */
+        z-index:1000;
+      }
+      .head_small {
+        background:linear-gradient(90deg, black, grey);
+        display:flex;
+        position:fixed; /* Fixed is better than absolute as it fix the position even when scolling */
+        top:10vh;
+        left:0; /* We'll take the left side as a spot better than the right one */
+        width:100%;
+        height:5vh;
         align-items:center; /* We center everything in height */
         justify-content:space-between; /* Distribue l'espace horizontalement */
         padding:0 1rem; /* Espace entre bordure et contenu */
