--- a/public/driver.html
+++ b/public/driver.html
@@ -64,7 +64,7 @@
       .menu {
         display:flex;
         flex-direction:column;
-        justify-content:center;
+        justify-content:space-around;
         width:90%;
         height:90%;
       }
