--- a/public/driver.html
+++ b/public/driver.html
@@ -136,7 +136,7 @@
         width:100%;
         height:5vh;
         align-items:center; /* We center everything in height */
-        justify-content:space-between; /* Distribue l'espace horizontalement */
+        justify-content:center; /* Distribue l'espace horizontalement */
         padding:0 1rem; /* Espace entre bordure et contenu */
         box-sizing:border-box;
         color:white;
