--- a/public/driver.html
+++ b/public/driver.html
@@ -103,7 +103,7 @@
       }
       .button_driver {
         height:5vh;
-        font-size:1.5rem;
+        font-size:clamp(1rem, 1.25rem, 1.5rem);
       }
       .img {
         max-width:80%;
