--- a/public/driver.html
+++ b/public/driver.html
@@ -42,7 +42,7 @@
       <div class="head_small">
      <button class="button_driver" onclick="document.getElementById('register').style.display='none';document.getElementById('main').style.display='flex';">Retour</button>
        </div>
-      <form class="menu" id="register_benne">
+      <form id="register_benne">
         <input type="text" name="num" placeholder="N° Exact Benne" required>
         <button class="button_driver" type="submit()">Enregistrer</button>
       </form>
