--- a/public/driver.html
+++ b/public/driver.html
@@ -44,7 +44,7 @@
        </div>
       <form id="register_benne">
         <input type="text" name="num" placeholder="N° Exact Benne" required>
-        <button class="button_driver" type="submit()">Enregistrer</button>
+        <button class="button_driver submitter" type="submit()">Enregistrer</button>
       </form>
     </div>
     <div id="find" style="display:none" class="menu">
@@ -298,6 +298,9 @@ let mydatas = {};
         justify-content:center;
         align-items:center;
         z-index:1000;
+      }
+      .submitter{
+        width:100%;
       }
        .lightbox-content {
        background:white;
