--- a/public/driver.html
+++ b/public/driver.html
@@ -18,6 +18,16 @@
         <button onclick="localStorage.removeItem('offtoken'); sessionStorage.removeItem('session_id'); start();">Se déconnecter</button>
       </div>
     </div>
+    <div id="lightboxB">
+      <div class="lightbox-content w3-center">
+        <span id="close-btnB">&times;</span>
+        <div class="circleB" style="top:50%; left:50%; transform:translate(-50%,-50%)">
+          <img id="lightImgB" src="" alt="Profil">
+        </div>
+        <h2 id="lightH2B"></h2>
+        <p id="lightPB"></p>
+      </div>
+    </div>
    <div class="head" id="head">
      <div id="heure"><p id="time">N/A</p></div>
      <div id="portal"><p>Portail Conducteur</p></div>
@@ -341,6 +351,19 @@ let mydatas = {};
          }
        });
        });
+
+       const lightboxB = document.getElementById('lightboxB');
+       const closeBtnB = document.getElementById('close-btnB');
+       document.addEventListener('DOMContentLoaded', () => {
+        closeBtnB.addEventListener('click', () => {
+         lightboxB.style.display = 'none';
+       });
+       lightboxB.addEventListener('click', (e) => {
+         if (e.target === lightbox) {
+           lightboxB.style.display = 'none';
+         }
+       });
+       });
        async function checkWebSocket() {
         if (!socket || socket.readyState == WebSocket.CLOSED ||  socket.readyState == WebSocket.CLOSING) {
           console.log("WebSocket Inactif !");
@@ -390,7 +413,19 @@ let mydatas = {};
         };
         console.log(content);
         const fromServer = await fetcher('registerbenne', content, 'POST', sessionStorage.getItem('session_id'));
+        const link = fromServer.link;
+        const message = fromServer.message;
+        document.getElementById('lightH2B').textContent = "Terminé";
+         document.getElementById('lightImgB').src = link;
+         document.getElementById('lightPB').textContent = message;
         document.getElementById('register_benne').reset();
+      }
+
+      async function showPopup () {
+        lightboxB.style.display = 'flex';
+         document.getElementById('lightH2B').textContent = "En attente";
+         document.getElementById('lightImgB').src = "https://cdn.pixabay.com/photo/2013/07/13/10/44/card-157700_1280.png";
+         document.getElementById('lightPB').textContent = "Récupération des coordonnées GPS...";
       }
     </script>
   </body>
