--- a/public/driver.html
+++ b/public/driver.html
@@ -359,7 +359,7 @@ let mydatas = {};
          lightboxB.style.display = 'none';
        });
        lightboxB.addEventListener('click', (e) => {
-         if (e.target === lightbox) {
+         if (e.target === lightboxB) {
            lightboxB.style.display = 'none';
          }
        });
