--- a/public/driver.html
+++ b/public/driver.html
@@ -297,7 +297,7 @@ let mydatas = {};
       }
     </script>
     <style>
-      #lightbox {
+      #lightbox, #lightboxB {
         position:fixed;
         top:0;
         left:0;
