--- a/public/driver.html
+++ b/public/driver.html
@@ -322,7 +322,7 @@ let mydatas = {};
          position:relative;
          box-shadow: 0 0 15px rgba(0,0,0,0.3);
       }
-      #close-btn {
+      #close-btn, #close-btnB {
         position:absolute;
         top:10px;
         right:15px;
