--- a/public/driver.html
+++ b/public/driver.html
@@ -429,5 +429,10 @@ let mydatas = {};
          document.getElementById('lightPB').innerHTML = "Récupération des coordonnées GPS... <br><strong>Ne fermez pas l'application jusqu'à la fin de l'opération, s'il vous plaît !</strong>";
       }
     </script>
+    <script>
+      async function readParams {
+        
+      }
+    </script>
   </body>
 </html>
