--- a/public/driver.html
+++ b/public/driver.html
@@ -228,6 +228,7 @@ const offset = -((new Date().getTimezoneOffset()) / 60);
         window.location.href = `https://${url.hostname}`; 
         }
       }
+            readParams();
       }
       
       start();
