--- a/public/index.html
+++ b/public/index.html
@@ -67,16 +67,16 @@
             console.log(last_url);
             if (last_url.hostname == "fleurea.onrender.com" && last_url.pathname == "/driver") {
               console.log("On renvoit tout en conservant le query...");
-              window.location.href = document.referrer;
+            //  window.location.href = document.referrer;
             } else {
-             window.location.href = `https://${url.hostname}/driver`; 
+           //  window.location.href = `https://${url.hostname}/driver`; 
             }
           } else {
-            window.location.href = `https://${url.hostname}/driver`; 
+           // window.location.href = `https://${url.hostname}/driver`; 
           }
         }
         if (data.role == 'admin') {
-          window.location.href = `https://${url.hostname}/admin`;
+       //   window.location.href = `https://${url.hostname}/admin`;
         }
       }
       
