--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,7 @@
               console.log("On renvoit tout en conservant le query...");
             //  window.location.href = document.referrer;
             } else {
+              console.log("Le referrer n'était pas le driver");
            //  window.location.href = `https://${url.hostname}/driver`; 
             }
           } else {
