--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
             console.warn(document.referrer);
             const last_url = new URL (document.referrer);
             console.log(last_url);
-            if (last_url.hostname == "fleurea.onrender.com" && last_url.pathname == "/driver") {
+            if (last_url.hostname == "fleuread.onrender.com" && last_url.pathname == "/driver") {
               console.log("On renvoit tout en conservant le query...");
             //  window.location.href = document.referrer;
             } else {
