--- a/public/driver.html
+++ b/public/driver.html
@@ -446,7 +446,9 @@ let mydatas = {};
               console.log("register");
               if (id) {
                 console.log(`Nous allons enregistrer la benne ${id}`);
-                document.getElementById("init_register").click();
+                document.getElementById('register').style.display='flex';
+                document.getElementById('main').style.display='none';
+                document.getElementById('find').style.display='none';
                 // On ouvre la bonne page
                 document.getElementById("input_id").value = id;
               }
