--- a/public/driver.html
+++ b/public/driver.html
@@ -466,16 +466,17 @@ let mydatas = {};
     </script>
     <script>
       async function readParams () {
-        showToast("Params are being read");
+        showToast("Lecture des paramètres en cours...");
         const urlParams = new URLSearchParams(window.location.search);
         const action = urlParams.get('action');
         const id = urlParams.get('id');
-     
       
             if (action == "register") {
               console.log("register");
+              showToast("Demande d'enregistrement...");
               if (id) {
                 console.log(`Nous allons enregistrer la benne ${id}`);
+                showToast(`Nous allons enregistrer la benne ${id}`);
                 document.getElementById('register').style.display='flex';
                 document.getElementById('main').style.display='none';
                 document.getElementById('find').style.display='none';
