--- a/public/driver.html
+++ b/public/driver.html
@@ -471,7 +471,7 @@ let mydatas = {};
         const urlParams = new URLSearchParams(window.location.search);
         const action = urlParams.get('action');
         const id = urlParams.get('benne');
-          showToast(`Résult : ${id} / ${action}`);
+          showToast(`Résult : ${id} / ${action}`, red);
       
       
             if (action == "register") {
