--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     
   </head>
   <body>
+     <div id="toast-container"></div>
     <div id="unconnected" hidden>
       <div class="form-container w3-center">
       <h1 class="w3-center">Bienvenue</h1>
@@ -141,6 +142,17 @@
         }
       }
       autoConnect();
+
+      function showToast(message, color = '#4CAF50') {
+        const toast = document.createElement('div');
+        toast.classList.add('toast');
+        toast.textContent = message;
+        toast.style.backgroundColor = color;
+        document.getElementById('toast-container').append(toast);
+        setTimeout(() => {
+          toast.remove();
+        }, 15000)
+      }
     </script>
     <style>
       body {
@@ -195,6 +207,34 @@
         height:auto;
        box-sizing:border-box;
         margin:0.5rem;
+      }
+      #toast-container {
+        position:fixed;
+        bottom:2vh;
+        right:2vw;
+        z-index:9999;
+        display:flex;
+        flex-direction:column;
+        gap:1vh;
+      }
+      .toast {
+        background-color:#4CAF50;
+        color:white;
+        padding: 1rem 1.5rem;
+        border-radius:5px;
+        font-size:1rem;
+        box-shadow: 0 0 10px;
+        animation:fadein 0.5s, fadeout 0.5s 14.5s;
+        opacity:0;
+        animation-fill-mode:forwards;
+      }
+      @keyframes fadein {
+        from {opacity:0; transform:translateX(50%);}
+        to {opacity:1; transform:translateX(0);}
+      }
+      @keyframes fadeout {
+        from {opacity:1; transform:translateX(0);}
+        to {opacity:0; transform:translateX(50%);}
       }
     </style>
   </body>
