--- a/public/index.html
+++ b/public/index.html
@@ -70,17 +70,20 @@
             console.log(last_url);
             if (last_url.hostname == "fleuread.onrender.com" && last_url.pathname == "/driver") {
               console.log("On renvoit tout en conservant le query...");
-              window.location.href = document.referrer;
+              showToast("Keep Query");
+             // window.location.href = document.referrer;
             } else {
               console.log("Le referrer n'était pas le driver");
-             window.location.href = `https://${url.hostname}/driver`; 
+               showToast("Don't keep Query");
+           //  window.location.href = `https://${url.hostname}/driver`; 
             }
           } else {
-            window.location.href = `https://${url.hostname}/driver`; 
+             showToast("No doc. referrer");
+         //   window.location.href = `https://${url.hostname}/driver`; 
           }
         }
         if (data.role == 'admin') {
-          window.location.href = `https://${url.hostname}/admin`;
+       //   window.location.href = `https://${url.hostname}/admin`;
         }
       }
       
