--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
         autoConnect();
       }
 
-      async checkReferrer(url) {
+      async function checkReferrer(url) {
         const content = {
           url:url
         }
