--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
         const content = {
           url:url
         }
-         const answer = await fetcher('checkreferrer',content,'POST',sessionStorage.getItem('session_id');
+         const answer = await fetcher('checkreferrer',content,'POST',sessionStorage.getItem('session_id'));
         return answer.value;
       }
       
