--- a/public/driver.html
+++ b/public/driver.html
@@ -65,7 +65,7 @@
        </div>
       <form id="find_benne">
         <input id="input_find" type="text" name="num" placeholder="N° Exact Benne" required>
-        <button id="submitter_find "class="button_driver submitter" type="submit()">Trouver</button>
+        <button id="submitter_find"class="button_driver submitter" type="submit">Trouver</button>
       </form>
       </div>
       <div style="display:none" id="resultBar">
