--- a/public/driver.html
+++ b/public/driver.html
@@ -504,8 +504,8 @@ let mydatas = {};
       }
 
       async function showResult () {
-        resultBar.style.display = 'flex';
-        searchBar.style.display = 'none';
+        document.getElementById('resultBar').style.display = 'flex';
+        document.getElementById('searchBar').style.display = 'none';
         document.getElementById('resultContainer_text').innerHTML = "<strong>En attente...</strong>";
         document.getElementById('resultContainer_img').src = "https://cdn.pixabay.com/photo/2016/05/30/14/23/detective-1424831_1280.png";
       }
