--- a/public/driver.html
+++ b/public/driver.html
@@ -353,6 +353,13 @@ let mydatas = {};
         cursor:pointer;
         color:red;
       }
+      #searchBar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100%;
+  height: 100%;
+}
       #toast-container {
         position:fixed;
         bottom:2vh;
